language/move-lang/tests/move_check/translated_ir_tests/commands/while_move_local_2.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/while_move_local_2.move:8:17 ───
   │
 8 │             y = move x;
   │                 ^^^^^^ Invalid usage of local 'x'
   ·
 8 │             y = move x;
   │                 ------ The local might not have a value due to this position. The local must be assigned a value before being used
   │

error: 

    ┌── tests/move_check/translated_ir_tests/commands/while_move_local_2.move:10:17 ───
    │
 10 │             x = move y;
    │                 ^^^^^^ Invalid usage of local 'y'
    ·
 10 │             x = move y;
    │                 ------ The local might not have a value due to this position. The local must be assigned a value before being used
    │

